added tutorial game for boilerplate

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.2.2/phaser.min.js"></script>
 
     {% javascript app %}
+    {% javascript game %}
 </head>
