game framework and drawing font on screen

--- a/_assets/javascripts/game/assets.js.erb
+++ b/_assets/javascripts/game/assets.js.erb
@@ -1,8 +1,8 @@
-var MY_GAME = MY_GAME || {};
-
 // Bootstrap asset paths into JS land
 
-MY_GAME.assets = {
+var GAME = {};
+
+GAME.assets = {
     baddie: "<%= asset_path 'baddie.png' %>",
     diamond: "<%= asset_path 'diamond.png' %>",
     dude: "<%= asset_path 'dude.png' %>",
