cleaned up physics simulation

--- a/_assets/javascripts/game/assets.js.erb
+++ b/_assets/javascripts/game/assets.js.erb
@@ -9,5 +9,7 @@ GAME.assets = {
     firstaid: "<%= asset_path 'firstaid.png' %>",
     platform: "<%= asset_path 'platform.png' %>",
     sky: "<%= asset_path 'sky.png' %>",
-    star: "<%= asset_path 'star.png' %>"
+    star: "<%= asset_path 'star.png' %>",
+    name: "<%= asset_path 'name.png' %>",
+    subtitle: "<%= asset_path 'subtitle.png' %>"
 };
