--- a/_assets/stylesheets/index.scss
+++ b/_assets/stylesheets/index.scss
@@ -1,5 +1,20 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    font-size: 60px;
+    
+    canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    
+    .home {
+        width: 900px;
+        margin-left: auto;
+        margin-right: auto;
+        
+        text-align: center;
+        
+        background-color: #ddd;
+    }
 }
