a lot of changes and improvements to stack

--- a/_assets/javascripts/game/assets.js.erb
+++ b/_assets/javascripts/game/assets.js.erb
@@ -3,5 +3,8 @@
 var GAME = {};
 
 GAME.assets = {
-    subtitle: "<%= asset_path 'subtitle.png' %>"
+    subtitle: "<%= asset_path 'subtitle.png' %>",
+    fullStack: "<%= asset_path 'full-stack-text.png' %>",
+    stackTech: "<%= asset_path 'stack-tech.png' %>",
+    clickDrag: "<%= asset_path 'click-drag.png' %>"
 };
