add spawner and box explosion

--- a/_assets/javascripts/game/assets.js.erb
+++ b/_assets/javascripts/game/assets.js.erb
@@ -7,5 +7,6 @@ GAME.assets = {
     fullStack: "<%= asset_path 'full-stack-text.png' %>",
     stackTech: "<%= asset_path 'stack-tech.png' %>",
     clickDrag: "<%= asset_path 'click-drag.png' %>",
-    player: "<%= asset_path 'player.png' %>"
+    player: "<%= asset_path 'player.png' %>",
+    cursor: "<%= asset_path 'cursor.png' %>"
 };
