--- a/_assets/stylesheets/index.scss
+++ b/_assets/stylesheets/index.scss
@@ -23,10 +23,13 @@ body {
         }
         
         .below-game {
-            margin: 400px auto 0;
-            width: 460px;
+            margin: 400px 0 0;
+            width: 100%;
             
             .block-text {
+                margin: 10px auto;
+                width: 460px;
+                
                 text-align: justify;
                 
                 font-size: 16px;
@@ -36,6 +39,82 @@ body {
             .clickable {
                 position: relative;
                 z-index: 1000;
+            }
+            
+            .passion-for {
+                font-weight: normal;
+                font-size: 40px;
+            }
+            
+            .interests {
+                list-style-type: none;
+                text-align: justify;
+                padding: 0;
+                
+                li {
+                    margin-bottom: 10px;
+                }
+                
+                .section-content {
+                    width: 600px;
+                    margin: 0 auto;
+                }
+                
+                .gradient {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    z-index: -1;
+                }
+                
+                .interest-label {
+                    margin: 20px 0 0 20px;
+                }
+                
+                .code-section, .music-section, .game-section, .mountain-section {
+                    .gradient {
+                        background: linear-gradient(to right,
+                            rgba(0,0,0,0.9) 0%,
+                            rgba(0,0,0,0.3) 50%,
+                            rgba(0,0,0,0.9) 100%);
+                    }
+                    
+                    .section-text {
+                        color: white;
+                    }
+                }
+
+                .code-section, .music-section, .game-section, .mountain-section {
+                    position: relative;
+                    width: 100%;
+                    height: 460px;
+                    z-index: -2;
+                }
+                
+                .code-section {
+                    background: url(image-path('code-bg.png'));
+                    background-size: cover;
+                    background-position: center top;
+                }
+                
+                .music-section {
+                    background: url(image-path('music-bg.png'));
+                    background-size: cover;
+                    background-position: center top;
+                }
+                
+                .game-section {
+                    background: url(image-path('game-bg.png'));
+                    background-size: cover;
+                    background-position: center top;
+                }
+                
+                .mountain-section {
+                    background: url(image-path('mountain-bg.png'));
+                    background-size: cover;
+                    background-position: center;
+                }
+
             }
         }
     }
