--- a/_assets/stylesheets/index.scss
+++ b/_assets/stylesheets/index.scss
@@ -12,6 +12,7 @@ body {
         position: absolute;
         top: 0;
         left: 0;
+        z-index: 200;
     }
     
     .home {
@@ -25,37 +26,47 @@ body {
             font-size: 30pt;
             color: white;
             
-            box-shadow: 0 5px 5px -2px #666;
+            /* box-shadow: 0 5px 5px -2px #666; */
             text-shadow: 3px 3px 5px #000;
             
             background: linear-gradient(to right, #111 0%, #272727 50%, #111 100%);
         }
         
+        .spacer {
+            height: 180px;
+            padding-top: 370px;
+            margin: 0;
+            
+            box-shadow: 0 0px 6px 6px #000;
+        }
+        
+        .block-text {
+            margin: 10px auto;
+            width: 460px;
+            
+            text-align: justify;
+            
+            font-size: 16px;
+            line-height: 30px;
+        }
+        
+        .clickable {
+            position: relative;
+            z-index: 1000;
+        }
+        
+        .passion-for {
+            margin: 0;
+            font-weight: normal;
+            font-size: 30pt;
+        }
+        
         .below-game {
-            margin: 400px 0 0;
+            margin: 0;
             width: 100%;
             
-            .block-text {
-                margin: 10px auto;
-                width: 460px;
-                
-                text-align: justify;
-                
-                font-size: 16px;
-                line-height: 30px;
-            }
-            
-            .clickable {
-                position: relative;
-                z-index: 1000;
-            }
-            
-            .passion-for {
-                font-weight: normal;
-                font-size: 30pt;
-            }
-            
             .interests {
+                margin: 0;
                 list-style-type: none;
                 text-align: justify;
                 padding: 0;
@@ -63,12 +74,46 @@ body {
                 >li {
                     margin-bottom: 20px;
                     
-                    box-shadow: 0 0 7px 0 #333;
+                    /* box-shadow: 0 0 7px 0 #333; */
                 }
                 
                 .section-content {
-                    width: 600px;
+                    width: 700px;
                     margin: 0 auto;
+                    color: white;
+                    font-size: 18px;
+                    line-height: 30px;
+                }
+                
+                .controls {
+                    text-align: center;
+                }
+                
+                .control {
+                    display: inline-block;
+                    text-align: center;
+                    margin: 10px 20px;
+                    padding: 10px;
+                    font-family: 'Open Sans', sans-serif;
+                    font-weight: bold;
+                    color: #ccc;
+                    cursor: pointer;
+                    border-radius: 5px;
+                    height: 62px;
+                    vertical-align: middle;
+                    
+                    .octicon {
+                        font-size: 30px;
+                    }
+                    
+                    &:hover {
+                        /* background: rgba(255,255,255,0.1); */
+                        color: #fff;
+                    }
+                }
+                
+                .github-logo {
+                    width: 100px;
                 }
                 
                 .gradient {
@@ -80,48 +125,47 @@ body {
                 
                 .interest-label {
                     margin: 20px 0 0 20px;
+                    width: 400px;
                 }
                 
-                .code-section, .music-section, .game-section, .mountain-section {
-                    .gradient {
-                        background: linear-gradient(to right,
-                            rgba(0,0,0,0.9) 0%,
-                            rgba(0,0,0,0.3) 50%,
-                            rgba(0,0,0,0.9) 100%);
-                    }
-                    
-                    .section-text {
-                        color: white;
-                    }
-                }
 
                 .code-section, .music-section, .game-section, .mountain-section {
-                    position: relative;
                     width: 100%;
-                    height: 460px;
-                    z-index: -2;
+                    height: 480px;
                 }
                 
                 .code-section {
-                    background: url(image-path('code-bg.png'));
+                    background: linear-gradient(
+                        rgba(0,0,0,0.6),
+                        rgba(0,0,0,0.6)),
+                        url(image-path('code-bg.png'));
                     background-size: cover;
                     background-position: center top;
                 }
                 
                 .music-section {
-                    background: url(image-path('music-bg.png'));
+                    background: linear-gradient(
+                        rgba(0,0,0,0.7),
+                        rgba(0,0,0,0.7)),
+                        url(image-path('music-bg.png'));
                     background-size: cover;
                     background-position: center top;
                 }
                 
                 .game-section {
-                    background: url(image-path('game-bg.png'));
+                    background: linear-gradient(
+                        rgba(0,0,0,0.7),
+                        rgba(0,0,0,0.7)),
+                        url(image-path('game-bg.png'));
                     background-size: cover;
                     background-position: center;
                 }
                 
                 .mountain-section {
-                    background: url(image-path('mountain-bg.png'));
+                    background: linear-gradient(
+                        rgba(0,0,0,0.7),
+                        rgba(0,0,0,0.7)),
+                        url(image-path('mountain-bg.png'));
                     background-size: cover;
                     background-position: center;
                 }
