--- a/_assets/javascripts/game/assets.js.erb
+++ b/_assets/javascripts/game/assets.js.erb
@@ -6,7 +6,7 @@ GAME.assets = {
     subtitle: "<%= asset_path 'subtitle.png' %>",
     fullStack: "<%= asset_path 'full-stack-text.png' %>",
     stackTech: "<%= asset_path 'stack-tech.png' %>",
-    clickDrag: "<%= asset_path 'click-drag.png' %>",
+    clickDrag: "<%= asset_path 'drag.png' %>",
     player: "<%= asset_path 'player.png' %>",
     cursor: "<%= asset_path 'cursor.png' %>"
 };
