--- a/_assets/stylesheets/index.scss
+++ b/_assets/stylesheets/index.scss
@@ -8,10 +8,12 @@ body {
         font-weight: bold;
     }
     
-    canvas {
+    #game-container {
         position: absolute;
         top: 0;
         left: 0;
+        width: 100%;
+        height: 723px;
         z-index: 200;
     }
     
@@ -162,6 +164,17 @@ body {
                         url(image-path('mountain-bg.png'));
                     background-size: cover;
                     background-position: center;
+                    
+                    .section-content {
+                        position: relative;
+                    }
+                    
+                    &.no-gradient {
+                        cursor: pointer;
+                        background: url(image-path('mountain-bg.png'));
+                        background-size: cover;
+                        background-position: center;
+                    }
                 }
 
             }
