--- a/_assets/stylesheets/index.scss
+++ b/_assets/stylesheets/index.scss
@@ -3,7 +3,7 @@ body {
     font-family: 'Roboto Slab', serif;
         
     a {
-        color: black;
+        color: white;
         text-decoration: none;
         font-weight: bold;
     }
